--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "vercel-build": "echo \"No build step required\""
+    "build": "echo \"No build step required\""
   },
   "keywords": [
     "youtube",
@@ -18,12 +18,16 @@
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "youtube-sr": "^4.3.11",
     "ytdl-core": "npm:@distube/ytdl-core@^4.16.10"
   },
   "devDependencies": {
-    "vercel": "^30.0.0" 
+    "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
