--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "echo \"No build step required\""
+    "vercel-build": "echo \"No build step required\""
   },
   "keywords": [
     "youtube",
@@ -17,17 +17,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "axios": "^1.9.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
-    "youtube-sr": "^4.3.11",
-    "ytdl-core": "npm:@distube/ytdl-core@^4.16.10"
+    "youtube-dl-exec": "^3.0.21",
+    "youtube-sr": "^4.3.11"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
-  "engines": {
-    "node": "18.x"
+    "nodemon": "^3.1.0",
+    "vercel": "^30.0.0"
   }
 }
