--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.10",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "ffmpeg-static": "^5.2.0",
-    "youtube-dl-exec": "^3.0.21",
     "youtube-sr": "^4.3.11"
   },
   "devDependencies": {
